adding citations and small fixes

--- a/literature.bib
+++ b/literature.bib
@@ -447,3 +447,74 @@ URL = {https://doi.org/10.1214/ss/1015346320}
   year={2021}
 }
 
+
+#------------------------------------------------------------------------------#
+# Cryptography
+#------------------------------------------------------------------------------#
+
+@misc{ceasar_cipher_wiki,
+  title={Wikipedia: Ceasar Cipher},
+  url={https://en.wikipedia.org/wiki/Caesar_cipher},
+  year={2022}
+}
+
+@misc{post-quantum_crypto_wiki,
+  title={Wikipedia: Post-quantum Cryptography},
+  url={https://en.wikipedia.org/wiki/Post-quantum_cryptography},
+  year={2022}
+}
+
+@misc{Kerckhoffs_principle_wiki,
+  title={Wikipedia: Kerckhoffs's principle},
+  url={https://en.wikipedia.org/wiki/Kerckhoffs%27s_principle},
+  year={2022}
+}
+
+@misc{rot13_wiki,
+  title={Wikipedia: ROT13},
+  url={https://en.wikipedia.org/wiki/ROT13},
+  year={2022}
+}
+
+@misc{CC_permutation,
+  title={Crypto Corner: Permutation Cipher},
+  url={https://crypto.interactive-maths.com/permutation-cipher.html},
+  year={2022}
+}
+
+@misc{xor_cipher_wiki,
+  title={Wikipedia: XOR cipher},
+  url={https://en.wikipedia.org/wiki/XOR_cipher},
+  year={2022}
+}
+
+@misc{DES_wiki,
+  title={Wikipedia: Data Encryption Standard},
+  url={https://en.wikipedia.org/wiki/Data_Encryption_Standard},
+  year={2022}
+}
+
+@misc{AES_wiki,
+  title={Wikipedia: Advanced Encryption Standard},
+  url={https://en.wikipedia.org/wiki/Advanced_Encryption_Standard},
+  year={2022}
+}
+
+@misc{blowfish_cipher_wiki,
+  title={Wikipedia: Blowfish (cipher)},
+  url={https://en.wikipedia.org/wiki/Blowfish_(cipher)},
+  year={2022}
+}
+
+@misc{RSA_wiki,
+  title={Wikipedia: RSA (cryptosystem)},
+  url={https://en.wikipedia.org/wiki/RSA_(cryptosystem)},
+  year={2022}
+}
+
+@misc{ECC_crypto_wiki,
+  title={Wikipedia: Elliptic-curve cryptography},
+  url={https://en.wikipedia.org/wiki/Elliptic-curve_cryptography},
+  year={2022}
+}
+
