adding note about marsaglia transform

--- a/literature.bib
+++ b/literature.bib
@@ -529,3 +529,15 @@ URL = {https://doi.org/10.1214/ss/1015346320}
   pages={610--611},
   year={1958}
 }
+
+@misc{marsaglia_wiki,
+  title={Wikipedia: Marsaglia Transform},
+  url={https://en.wikipedia.org/wiki/Marsaglia_polar_method},
+  year={2022}
+}
+
+@misc{box_muller_wiki,
+  title={Wikipedia: Box-Muller Transform},
+  url={https://en.wikipedia.org/wiki/Box%E2%80%93Muller_transform},
+  year={2022}
+}
