--- a/literature.bib
+++ b/literature.bib
@@ -447,7 +447,6 @@ URL = {https://doi.org/10.1214/ss/1015346320}
   year={2021}
 }
 
-
 #------------------------------------------------------------------------------#
 # Cryptography
 #------------------------------------------------------------------------------#
@@ -518,3 +517,27 @@ URL = {https://doi.org/10.1214/ss/1015346320}
   year={2022}
 }
 
+#------------------------------------------------------------------------------#
+# BOX--MULLER
+#------------------------------------------------------------------------------#
+
+@article{box1958,
+  title={A note on the generation of random normal deviates},
+  author={Box, George EP},
+  journal={Ann. Math. Statist.},
+  volume={29},
+  pages={610--611},
+  year={1958}
+}
+
+@misc{marsaglia_wiki,
+  title={Wikipedia: Marsaglia Transform},
+  url={https://en.wikipedia.org/wiki/Marsaglia_polar_method},
+  year={2022}
+}
+
+@misc{box_muller_wiki,
+  title={Wikipedia: Box-Muller Transform},
+  url={https://en.wikipedia.org/wiki/Box%E2%80%93Muller_transform},
+  year={2022}
+}
