adding skeleton for upcoming chapters

--- a/literature.bib
+++ b/literature.bib
@@ -541,3 +541,43 @@ URL = {https://doi.org/10.1214/ss/1015346320}
   url={https://en.wikipedia.org/wiki/Box%E2%80%93Muller_transform},
   year={2022}
 }
+
+#------------------------------------------------------------------------------#
+# RNG
+#------------------------------------------------------------------------------#
+
+@misc{RNG_reddit,
+  title={Asking over 8500 students to pick a random number from 1 to 10 [OC]},
+  url={https://www.reddit.com/r/dataisbeautiful/comments/acow6y/asking_over_8500_students_to_pick_a_random_number/},
+  year={2023}
+}
+
+@misc{RNG_Numberphile,
+  title={Random Numbers - Numberphile},
+  url={https://www.youtube.com/watch?v=SxP30euw3-0},
+  year={2013}
+}
+
+@article{Shepard197582,
+title = {The internal representation of numbers},
+journal = {Cognitive Psychology},
+volume = {7},
+number = {1},
+pages = {82-138},
+year = {1975},
+issn = {0010-0285},
+doi = {https://doi.org/10.1016/0010-0285(75)90006-7},
+url = {https://www.sciencedirect.com/science/article/pii/0010028575900067},
+author = {Roger N Shepard and Dan W Kilpatric and James P Cunningham},
+}
+
+@article{navarro2008latent,
+  title={Latent features in similarity judgments: A nonparametric Bayesian approach},
+  author={Navarro, Daniel J and Griffiths, Thomas L},
+  journal={Neural computation},
+  volume={20},
+  number={11},
+  pages={2597--2628},
+  year={2008},
+  publisher={MIT Press}
+}
